Fixes #2: background works well on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 }
 
 .main {
